--- a/index.html
+++ b/index.html
@@ -15,104 +15,22 @@
 </head>
 <body>
   <div class="window">
-    <header class="toolbar toolbar-header">
-      <h1 class="title">sequelFIRE🔥</h1>
-      <div class="toolbar-actions">
-        <div class="btn-group">
-          <button class="btn btn-default">
-            <span class="icon icon-home"></span>
-          </button>
-          <button class="btn btn-default">
-            <span class="icon icon-folder"></span>
-          </button>
-          <button class="btn btn-default active">
-            <span class="icon icon-cloud"></span>
-          </button>
-          <button class="btn btn-default">
-            <span class="icon icon-popup"></span>
-          </button>
-          <button class="btn btn-default">
-            <span class="icon icon-shuffle"></span>
-          </button>
-        </div>
-
-        <button class="btn btn-default">
-          <span class="icon icon-home icon-text"></span>
-          Filters
-        </button>
-
-        <button class="btn btn-default btn-dropdown pull-right">
-          <span class="icon icon-megaphone"></span>
-        </button>
-      </div>
-    </header>
+    <header></header>
     <div class="window-content">
       <div class="pane-group">
         <div class="pane-sm sidebar">
-          <nav class="nav-group">
-            <h5 class="nav-group-title">Favorites</h5>
-            <a class="nav-group-item active">
-              <span class="icon icon-home"></span>
-              connors
-            </a>
-            <span class="nav-group-item">
-              <span class="icon icon-download"></span>
-              Downloads
-            </span>
-            <span class="nav-group-item">
-              <span class="icon icon-folder"></span>
-              Documents
-            </span>
-            <span class="nav-group-item">
-              <span class="icon icon-signal"></span>
-              AirPlay
-            </span>
-            <span class="nav-group-item">
-              <span class="icon icon-print"></span>
-              Applications
-            </span>
-            <span class="nav-group-item">
-              <span class="icon icon-cloud"></span>
-              Desktop
-            </span>
-          </nav>
+          <sidebar></sidebar>
         </div>
         <div class="pane">
-          <table class="table-striped">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Kind</th>
-                <th>File Size</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>photon.css</td>
-                <td>CSS</td>
-                <td>28K</td>
-              </tr>
-              <tr>
-                <td>photon.css</td>
-                <td>CSS</td>
-                <td>28K</td>
-              </tr>
-              <tr>
-                <td>photon.css</td>
-                <td>CSS</td>
-                <td>28K</td>
-              </tr>
-              <tr>
-                <td>photon.css</td>
-                <td>CSS</td>
-                <td>28K</td>
-              </tr>
-            </tbody>
-          </table>
+          <table-list></table-list>
         <div>
       </div>
     </div>
   </div>
+
+  <script src="./tags/header.tag" type="riot/tag"></script>
+  <script src="./tags/sidebar.tag" type="riot/tag"></script>
+  <script src="./tags/table-list.tag" type="riot/tag"></script>
   <script>
     /***********************************************
     * Firebase Initialization
@@ -126,6 +44,16 @@
     firebase.initializeApp(config);
     var db = firebase.firestore();
 
+
+    /***********************************************
+    * Riot
+    ***********************************************/
+    riot.mount('header')
+    riot.mount('sidebar')
+    riot.mount('table-list')
+
+
+/*
     var tbody = document.getElementsByTagName('tbody')[0];
     var trs = "";
     var docRef = db.collection("timelines").orderBy('updatedAt', 'desc')
@@ -137,6 +65,7 @@
       }
       tbody.innerHTML = trs;
     })
+*/
   </script>
 </body>
 </html>
