add collection select

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       -webkit-app-region: drag; /* ドラッグ可能に */
       -webkit-user-select: none; /* ドラッグはテキスト選択と競合するので禁止 */
     }
+    .pane-sm.sidebar {
+      position: relative;
+    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.0.0/riot+compiler.min.js"></script>
 </head>
