--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     .pane-sm.sidebar {
       position: relative;
     }
-    :disabled, .disabled {
+    :disabled:not(.btn-basic), .disabled:not(.btn-basic) {
       background: #efefef;
       color: #999;
     }
-    .btn:not(.disabled), .btn-basic i { cursor: pointer; }
+    .btn-basic.disabled i { color: #aaa; }
+    .btn-basic { box-shadow: none; }
+    .btn:not(.disabled), .btn-basic:not(.disabled) i { cursor: pointer; }
     input { cursor: text; }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/riot/3.0.0/riot+compiler.min.js"></script>
