--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
   <before-login></before-login>
-  <loggedin></loggedin>
+  <after-login></after-login>
 
+  <script src="./tags/after-login.tag" type="riot/tag"></script>
   <script src="./tags/before-login.tag" type="riot/tag"></script>
-  <script src="./tags/loggedin.tag" type="riot/tag"></script>
   <script src="./tags/collection.tag" type="riot/tag"></script>
   <script src="./tags/document.tag" type="riot/tag"></script>
   <script src="./tags/filter.tag" type="riot/tag"></script>
@@ -35,17 +35,11 @@
   <script src="./tags/main.tag" type="riot/tag"></script>
   <script src="./tags/sidebar.tag" type="riot/tag"></script>
   <script>
+    const Firestore = require('@google-cloud/firestore')
+    const {dialog} = require('electron').remote
+    var firestore, projectId
     var obs = riot.observable()
     riot.mount('before-login')
-    // riot.mount('loggedin')
-
-
-    const Firestore = require('@google-cloud/firestore')
-    var firestore
-    // var firestore = new Firestore({
-    //   projectId: 'timeline-stg',
-    //   keyFilename: '/Users/tomomichi/Documents/projects/notsobad/sequelFIRE/cert.json',
-    // })
   </script>
 </body>
 </html>
