--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script>
     const Firestore = require('@google-cloud/firestore')
     const {dialog} = require('electron').remote
-    var firestore, projectId
+    var firestore
     var obs = riot.observable()
     riot.mount('before-login')
   </script>
