--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <script src="./tags/footer.tag" type="riot/tag"></script>
   <script src="./tags/header.tag" type="riot/tag"></script>
   <script src="./tags/main.tag" type="riot/tag"></script>
+  <script src="./tags/query.tag" type="riot/tag"></script>
   <script src="./tags/sidebar.tag" type="riot/tag"></script>
   <script>
     const Firestore = require('@google-cloud/firestore')
