add error handling

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     var firestore
     var obs = riot.observable()
     riot.mount('before-login')
+
+    const fs = require('fs');
   </script>
 </body>
 </html>
